Fix W Labs logo spacing on tablet/mobile

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -830,7 +830,7 @@ footer {
   margin: 4em auto 0; }
   @media screen and (max-width: 959px) {
     .w-labs-logo {
-      margin: 0 auto; } }
+      margin: 30px auto 0; } }
 
 nav.secondary {
   overflow: hidden;
