--- a/docs/assets/sass/_theme.scss
+++ b/docs/assets/sass/_theme.scss
@@ -54,7 +54,7 @@
   margin: 4em auto 0;
 
   @include mq(tween, 'max-width') {
-    margin: 0 auto;
+    margin: 30px auto 0;
   }
 }
 
